fixed vertical alignment

--- a/src/style.css
+++ b/src/style.css
@@ -50,7 +50,6 @@ h3 {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	width: 98%;
-	height: 95%;
 }
 
 .product-card {
